Update margin to fix button alignment

--- a/src/components/Editor/Tabs.css
+++ b/src/components/Editor/Tabs.css
@@ -13,7 +13,8 @@
 
 .source-header .new-tab-btn {
   padding: 4px;
-  margin: 4px 2px 2px 2px;
+  margin-top: 4px;
+  margin-left: 3px;
   fill: var(--theme-content-color3);
   transition: 0.1s ease;
   align-self: center;
@@ -25,6 +26,7 @@
 
 .source-header .new-tab-btn svg {
   width: 12px;
+  display: block;
 }
 
 .source-tabs {
